(executable
 (name CamlLib)
 (enabled_if (or
  (= %{context_name} "default.ios")
  (= %{context_name} "device.ios")
  (= %{context_name} "simulator.ios")
  (= %{context_name} "simulator-arm.ios")
  (= %{context_name} "catalyst.ios")))
 (libraries
  camlkit-base.Foundation
  camlkit-gui.UIKit)
 (modes (native object)))

(rule
 (enabled_if (or
  (= %{context_name} "default.ios")
  (= %{context_name} "device.ios")
  (= %{context_name} "simulator.ios")
  (= %{context_name} "simulator-arm.ios")
  (= %{context_name} "catalyst.ios")))
 (deps CamlLib.exe.o)
 (targets libCamlLib.a)
 (action (run ar cq %{targets} %{deps})))